devops-projects/intermediate/project-18-service-mesh/k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-starter
  name: devops-app-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-app
      version: v1
  template:
    metadata:
      labels:
        app: devops-app
        version: v1
    spec:
      containers:
        - name: app
          image: devops-starter:v1
          ports:
            - containerPort: 8000
